# adafruit-nrf52840-bsc

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  nrf52.gdb
.cargo/: config.toml
adafruit-nrf52840-common/: Cargo.toml
adafruit-nrf52840-common/src/: serial.rs
adafruit-nrf52840-examples/: Cargo.toml
adafruit-nrf52840-examples/examples/: ahrs.rs  blink-button.rs  blink.rs  pwm.rs  serial.rs
adafruit-nrf52840-express/: Cargo.toml
adafruit-nrf52840-express-bsc/: Cargo.toml
adafruit-nrf52840-express-bsc/examples/: blink.rs
adafruit-nrf52840-express/examples/: blink-button.rs  blink.rs  serial.rs
adafruit-nrf52840-express/src/: board.rs  lib.rs
adafruit-nrf52840-sense/: Cargo.toml
adafruit-nrf52840-sense-bsc/: Cargo.toml
adafruit-nrf52840-sense-bsc/examples/: blink.rs
adafruit-nrf52840-sense-bsc/src/: lib.rs
adafruit-nrf52840-sense/examples/: barometer.rs  blink-button.rs  blink.rs  imu.rs  magnetometer.rs  proximity.rs  serial.rs
adafruit-nrf52840-sense/src/: board.rs  lib.rs  pins.rs
