[workspace]
members = [
    "adafruit-nrf52840-common",
    "adafruit-nrf52840-sense",
    "adafruit-nrf52840-express",

    "adafruit-nrf52840-examples"
]

[patch.crates-io]
bmp280-ehal = {git = "https://github.com/nnarain/bmp280.git", branch = "fix-configure-address"}
lis3mdl = {git = "https://github.com/nnarain/lis3mdl.git", branch = "fix-config-address"}
