cargo-features = ["per-package-target"]

[package]
name = "adafruit-nrf52840-examples"
version = "0.2.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"
publish = false

[dependencies]
panic-halt = "0.2"
ahrs = {version = "0.4", default-features = false}
nalgebra = {version = "0.21", default-features = false}

[dependencies.adafruit-nrf52840-express]
path = "../adafruit-nrf52840-express"
optional = true

[dependencies.adafruit-nrf52840-sense]
path = "../adafruit-nrf52840-sense"
optional = true

[features]
express = ["adafruit-nrf52840-express"]
sense = ["adafruit-nrf52840-sense"]
