cargo-features = ["per-package-target"]

[package]
name = "adafruit-nrf52840-express"
version = "0.1.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"
description = "Board support crate for Adafruit's nRF52840 Express board"
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/nnarain/adafruit-nrf52840-bsc"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
nrf52840-hal = "0.14"
nb = "1.0.0"
shared-bus = "0.2.2"

# adafruit-nrf52840-common = {path="../adafruit-nrf52840-common"}

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]